// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser while statements while with exit 1`] = `
Array [
  While {
    "body": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": BrsString {
                "kind": 2,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": 79,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
        },
        ExitWhile {
          "tokens": Object {
            "exitWhile": Object {
              "isReserved": false,
              "kind": 61,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "exit while",
            },
          },
        },
      ],
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "value": BrsBoolean {
        "kind": 1,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": 89,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
  },
]
`;

exports[`parser while statements while without exit 1`] = `
Array [
  While {
    "body": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": BrsString {
                "kind": 2,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": 79,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
        },
      ],
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "value": BrsBoolean {
        "kind": 1,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": 89,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
  },
]
`;
